IAM/openldap-fixer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: openldap-fixer
  namespace: identity
spec:
  containers:
  - name: fixer
    image: osixia/openldap:1.5.0
    command:
    - /bin/sh
    - -c
    args:
    - |
      [...]
    volumeMounts:
    - name: data
      mountPath: /var/lib/ldap
    - name: config
      mountPath: /etc/ldap/slapd.d
    securityContext:
      runAsUser: 0
      runAsGroup: 0
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: openldap-pvc
  - name: config
    persistentVolumeClaim:
      claimName: openldap-config-pvc
