IAM/keycloak-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    # Traefik
    #traefik.ingress.kubernetes.io/router.entrypoints: web
    # Si vous utilisez nginx-ingress, décommentez plutôt :
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  ingressClassName: nginx          # changez si votre IngressClass est différente
  rules:
    - host: keycloak.local           # ← changez ici (ex: keycloak.votre-domaine.tld)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
